Modifications concernant l'engagement des candidats

--- a/app/views/admin/engagements/_form.html.haml
+++ b/app/views/admin/engagements/_form.html.haml
@@ -2,7 +2,7 @@
   =hidden_field_tag "autocomplete_path",autocomplete_index_admin_candidates_path
   =f.input :candidate_name, label: "Nom du candidat", hint: "Veuillez commencer à inscrire le nom pour afficher les résultats"
   =f.input :candidate_id, as: :hidden
-  =f.input :status, as: :select, collection: [[display_engagement(1),1],[display_engagement(0),0],[display_engagement(2),2]], label: "Réponse", include_blank: false
+  =f.input :status, as: :select, collection: [[display_engagement(1),1],[display_engagement(0),0],[display_engagement(2),2], [display_engagement(3),3]], label: "Réponse", include_blank: false
   =f.input :notes, as: :string, label: "Commentaires"
   =f.submit "Enregistrer", class: "btn btn-success"
 
