--- a/app/views/home/engagement_candidats.html.haml
+++ b/app/views/home/engagement_candidats.html.haml
@@ -13,7 +13,7 @@
 
 
 
-%p De plus, avant d’adopter la loi créant la Constituante, nous souhaitons que l’Assemblée nationale tienne une série de consultations publiques dans tout le Québec afin d’impliquer dès le départ l’ensemble de la population dans le processus.
+%p De plus, avant d’adopter la loi créant la Constituante, nous souhaitons que l’Assemblée nationale tienne une série de consultations publiques dans tout le Québec afin d’impliquer, dès le départ, l’ensemble de la population dans le processus.
 
 
 
