--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -20,11 +20,11 @@
         %li Bâtir des ponts avec la société civile.
         %li Établir des ateliers constituants qui porteront sur les divers chapitres d'une constitution : <i>choix de société, statut des personnes vulnérables, langue officielle, laïcité, droits, libertés et responsabilités, services publics, éducation, ressources naturelles et environnement, sécurité, politiques économiques, fiscales et monétaires, type de gouvernement, mécanismes de participation des citoyens et des citoyennes, et des régions, gouvernements territoriaux, etc.</i>
 
-    
+
 
 
     %h4 Objectif  2 : Rassembler la population québécoise autour d'un projet commun tangible puisqu’elle a l’intelligence, la capacité et la détermination :
-    
+
     %ol{type: "a"}
       %li de définir les règles d’une future Assemblée constituante (mandat, format, critères d'éligibilité, lignes de conduite, statuts et règlements, tirage au sort, etc.);
       %li d’écrire par elle-même sa propre constitution
@@ -46,7 +46,7 @@
         %li Diffuser le résultat de l’expérience constituante à toute la population du Québec.
 
     %h4 Objectif 3 : D’ici la prochaine élection générale au Québec, faire pression sur les partis et sur l’Assemblée nationale pour nous assurer que soit convoquée, rapidement après l’élection, une Assemblée constituante, totalement libre dans ses délibérations.
-    
+
     %p
       %strong Moyens :
       %ul
@@ -57,5 +57,7 @@
     %blockquote
       %h2 Un monde libre et responsable déploie ses ailes. ENSEMBLE, prenons notre envol!
 
-    %p.lead= link_to "Découvrez votre ACRQ", hives_path
+    %ul
+      %li= link_to "Découvrez votre ACRQ", hives_path
+      %li= link_to "Signez l'APPEL maintenant", event_path(2)
       
