--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -6,34 +6,31 @@
 .row
   .col-md-6
     %p Voici les membres de l’équipe de coordination nationale de l’ACCQ, en date du 30 mars 2018  :
- 
+
     %ul.list
       %li Alain M. Bergeron - #{mail_to "alainmbergeron@hotmail.com"} - ACRQ 05 - Estrie
       %li Michèle Clément - #{mail_to "michele.clement44@gmail.com"} - ACRQ 16 - Montérégie
       %li Céline Couturier - #{mail_to "celinecouturier71@gmail.com"} - ACRQ 03 - Capitale-Nationale
-      %li Danielle Gagnon - #{mail_to "daniellegagnon58@outlook.com"} - ACRQ  03 - Capitale-Nationale
       %li Steve Graindlair - #{mail_to "stevegraindlair@gmail.com"} - ACRQ 12 - Chaudière-Appalaches
       %li Luc Harbour - #{mail_to "lucharbour@gmail.com"} - ACRQ 05 - Estrie
+      %li Joanne Lamy - #{mail_to "joanne.lamy@hotmail.com"} - ACRQ 06 - Montréal
       %li Danielle Morin – #{mail_to "daniellemorin2013@hotmail.com"} - ACRQ 05 - Estrie
       %li Daniel Raunet - #{mail_to "draunet@hotmail.fr"} - ACRQ 16 - Montérégie
-      %li Andréanne Sylvain - #{mail_to "asylvain321@gmail.com"} - ACRQ 09 - Côte-Nord
- 
+      %li Gérard Sévigny - #{mail_to "sevigny.ge@videotron.ca"} - ACRQ 15 - Laurentides
   .col-md-6
     %p Notez que plusieurs comités sont formés ou sont en cours de formation, pour atteindre notre objectif d’ici la prochaine élection d’octobre 2018 :
- 
+
     %ul.list
       %li Activation des régions – Responsable : Danielle Morin
       %li Argumentaire – Responsable : Alain M. Bergeron
-      %li Communications – Responsable : Andréanne Sylvain
-      %li Décret de convocation - Responsable : Alain M. Bergeron
+      %li Communications – Responsable : Daniel Raunet
+      %li Projet de loi - Responsables : Alain M. Bergeron et Daniel Raunet
       %li Financement / Enregistrement -
       %li Multimédia (TI) -  Responsables : François Lamontagne et Marc-André Robillard
-      %li Rédaction des formulaires d’engagement – Responsable : Danielle Gagnon
-      %li Tournée nationale à vélo 2018 – Responsable : Alain M. Bergeron
       %li Éducation populaire / Gentils virus -
 
     %p Pour tout intérêt à vous impliquer dans l’un ou l’autre de ces comités, écrivez-nous à #{mail_to "info@accq.quebec"}.
- 
+
   .row
     .col-md-12
       %p L'ACCQ tient à remercier ceux et celles qui s'impliquent avec dévouement et conviction.
