--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,5 +1,6 @@
-%h3.text-center{style: "text-decoration: underline"}
-  =link_to "Engagement solennel des personnes candidates aux élections d'octobre 2018", engagement_candidats_path
+%h3.text-center
+  =fa_stacked_icon "exclamation", base: "circle-o", class: "text-danger"
+  =link_to "Engagement solennel des personnes candidates aux élections d'octobre 2018", engagement_candidats_path, class: "text-danger"
 
 .row
   .col-md-6
