--- a/app/views/home/objectifs.haml
+++ b/app/views/home/objectifs.haml
@@ -6,7 +6,7 @@
 .row
   .col-md-12
     =render "mission_nav", active: :objectifs
-    
+
     %h2.sub-section LE PREMIER OBJECTIF de l'#{t("org_name"} vise à mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
 
     %p <strong>NOUS,</strong> Constituants, Constituantes, exercerons les pressions nécessaires auprès de toutes les personnes concernées d’ici le prochain rendez-vous électoral québécois afin que les candidat(e)s s'engagent solennellement, au-delà de toute ligne de parti,  à convoquer, sans délai, une Assemblée constituante indépendante de l'État et à lui fournir les moyens requis pour un fonctionnement efficace.
@@ -22,14 +22,14 @@
 
     %h2.sub-section
       NOTRE DEUXIÈME OBJECTIF est de convoquer une Assemblée constituante citoyenne dès qu’il nous sera possible de le faire.
-    
+
     %p Tous les débats de l’ACCQ seront accessibles par web diffusion.
 
     %p Une fois notre structure organisationnelle bien établie, nous définirons ENSEMBLE, démocratiquement, le mode de fonctionnement (lignes de conduite, critères d’éligibilité, statuts et règlements, etc.) de l’#{t("org_name")}.
 
 
     %h3 Comment le réaliserons-nous ?
- 
+
     %p <strong>Ensemble,</strong> nous établirons une structure organisationnelle décentralisée pour faciliter l’accessibilité des Constituants et des Constituantes afin de leur permettre de participer à toutes les décisions. Des outils modernes de démocratie directe seront aussi utilisés.
 
     %p <strong>Ensemble,</strong> nous établirons un noyau central, composé de différents comités et d’un comité organisateur (COOR) au niveau national, qui permettra l'harmonisation de notre démarche.
@@ -55,4 +55,6 @@
 
     %p Vous trouverez, dans votre regroupement régional, le réseau et les moyens nécessaires pour favoriser l'instauration d'une véritable démocratie.
 
-    %p.lead= link_to "Découvrez votre ACRQ", hives_path
+    %ul
+      %li= link_to "Découvrez votre ACRQ", hives_path
+      %li= link_to "Signez l'APPEL maintenant", event_path(2)
