--- a/app/views/engagements/index.html.haml
+++ b/app/views/engagements/index.html.haml
@@ -59,4 +59,4 @@
           %td= c.political_party.name
 
 %p.small
-  NOTA :  L’ACCQ n’a pas interpelé les personnes candidates des partis politiques qui ont obtenu moins de 0.3% des bulletins valides aux dernières élections générales (2014). Nous avons en outre ajouté à la liste deux nouvelles formations politiques : le Nouveau parti démocratique du Québec et Citoyens au pouvoir.
+  NOTA :  L’ACCQ n’a pas interpellé les personnes candidates des partis politiques qui ont obtenu moins de 0.3% des bulletins valides aux dernières élections générales (2014). Nous avons en outre ajouté à la liste deux nouvelles formations politiques : le Nouveau parti démocratique du Québec et Citoyens au pouvoir.
