iamge d'entête moins haute

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -2,7 +2,11 @@
   =fa_stacked_icon "exclamation", base: "circle-o", class: "text-danger"
   =link_to "Engagement solennel des personnes candidates aux élections d'octobre 2018", engagement_candidats_path, class: "text-danger"
 
+%ul.list.list-unstyled.list-inline.text-center
+  %li= link_to "Liste des personnes candidates qui se sont prononcées", engagements_path, class: "btn btn-danger"
+  %li= link_to "Liste des personnes candidates par circonscription", districts_path, class: "btn btn-danger"
 .row
+
   .col-md-6
     -if @next_event
       %h3.sub-section À ne pas manquer
@@ -21,7 +25,7 @@
         %br/
         =link_to "Inscription en ligne", event_path(@next_event), class: "btn btn-info"
 
-    %h3.sub-section Joignez-vous à NOUS!
+    %h3.sub-section Joignez-vous à NOUS #{link_to "en signant l'appel!", lappel_path}
     .youtube-container
       .youtube-player{"data-id" => "YiwqudxfQIQ"}
 
