Ajout communiqué de presse aout 2018

--- a/app/views/home/media.html.haml
+++ b/app/views/home/media.html.haml
@@ -1,7 +1,11 @@
 -content_for :page_title do
   Communiqués de presse
 
-%h3 What does Quebec want? De plus en plus de Québécois veulent y répondent! (15 juin 2018)
+%h4 Appel aux personnes candidates (15 août 2018)
+%ul
+  %li= link_to "Communiqué de presse (PDF)", asset_path("medias/cp_aout2018.pdf")
+
+%h4 What does Quebec want? De plus en plus de Québécois veulent y répondent! (15 juin 2018)
 %ul
   %li= link_to "Communiqué de presse (PDF)", asset_path("medias/cp_juin2018.pdf")
   %li= link_to "Document #1 (PDF)", asset_path("medias/cp_juin2018_doc1.pdf")
