--- a/app/views/home/media.html.haml
+++ b/app/views/home/media.html.haml
@@ -1,6 +1,10 @@
 -content_for :page_title do
   Communiqués de presse
 
+%h4 L'ACCQ interpelle le gouvernement Legault (10 octobre 2018)
+%ul
+  %li= link_to "Communiqué de presse (PDF)", asset_path("medias/cp_post_electoral.pdf")
+
 %h4 Appel aux personnes candidates (15 août 2018)
 %ul
   %li= link_to "Communiqué de presse (PDF)", asset_path("medias/cp_aout2018.pdf")
