Correction au communiqué de presse + ajout de l'annexe

--- a/app/views/home/media.html.haml
+++ b/app/views/home/media.html.haml
@@ -4,6 +4,7 @@
 %h4 L'ACCQ interpelle le gouvernement Legault (10 octobre 2018)
 %ul
   %li= link_to "Communiqué de presse (PDF)", asset_path("medias/cp_post_electoral.pdf")
+  %li= link_to "Annexe (PDF)", asset_path("medias/cp_post_electoral_annexe.pdf")
 
 %h4 Appel aux personnes candidates (15 août 2018)
 %ul
