--- a/app/views/home/mumble.haml
+++ b/app/views/home/mumble.haml
@@ -1,68 +1,63 @@
 -content_for :page_title do
-  Discussion sur Mumble
+  Bienvenue aux amies et amis de Constituons!
 
 -breadcrumb :mumble
 
 .row
   .col-md-8
     .row
-      .col-md-2
-        =image_tag "mumble-logo.png", class: "img-responsive"
       .col-md-10
         %p.lead
-          Nous mettons à votre disposition un outil libre et gratuit qui vous permet de venir discuter avec nous ou entre vous des sujets qui vous intéressent. Avec un ordinateur, une tablette ou un téléphone intelligent, un casque d’écoute, un micro et une connexion internet, vous serez en mesure de participer tous les jours à n’importe quelle heure.
-        
-    %h2 1. Installation
-    .row
-      .col-md-12
+          L’ACCQ collabore à l’expérience en cours d’Assemblée constituante établie sous l’égide de #{link_to "l’Institut du Nouveau Monde", "http://inm.qc.ca/constituon", target: "_blank"} en vous offrant de vous inscrire à nos forums constituants virtuels.
+
+        %p Nous mettons ici à votre disposition un outil libre et gratuit qui vous permettra de participer à la rédaction d’une constitution par et pour le peuple. Avec un ordinateur (idéalement), une tablette ou un téléphone intelligent, un micro (et/ou un casque d’écoute) et une connexion internet, vous serez en mesure de vous joindre à nos délibérations citoyennes.
+
+        %p En concordance avec les commissions établies par Constituons!, nos ateliers constituants s’insèrent sous six thèmes:
+        %ul
+          %li Préambule, valeurs et principes, symboles nationaux
+          %li Droits et devoirs fondamentaux
+          %li Institutions et pouvoirs (législatif, exécutif et judiciaire)
+          %li Organisation territoriale et attribution des compétences régionales et municipales
+          %li Partenariats autochtones, affaires canadiennes et relations internationales
+          %li Procédures de révision et participation citoyenne.
+
+
+        %h3 CONSEILS PERSONNALISÉS POUR L’INSTALLATION DE MUMBLE
+
+
         %p
-          Pour nous rejoindre, il vous suffit de télécharger le logiciel sous licence libre à l’adresse suivante : #{link_to "https://www.mumble.com/", "https://www.mumble.com/", target: "_blank"} et de suivre les #{link_to "étapes d’installation", "https://www.mumble.com/support/mumble-server-install-on-windows.php", target: "_blank"}
-        
+          Si vous n’êtes pas très à l’aise avec l’électronique, il nous fera plaisir de vous aider pas à pas lors de l'installation de notre outil d’audioconférence « Mumble » et de vous permettre de vous familiariser avec notre outil de rédaction collaborative « Framapad ». Il vous suffit de nous écrire à secretariat@accq.quebec en nous indiquant votre numéro de téléphone pour prendre un rendez-vous. Vous pouvez aussi communiquer directement avec Alain (418) 931-3230 ou Jean (514) 284-1379 qui vous accompagneront avec plaisir.
+
+
+        %h3 SI VOUS INSTALLEZ MUMBLE VOUS-MÊME
+
+
+        %h4 1) Installation
+        %p
+          Pour nous rejoindre, il vous suffit de télécharger le logiciel sous licence libre à l’adresse suivante : #{link_to "https://www.mumble.com", "https://www.mumble.com", target: "_blank"} et de suivre les #{link_to "étapes d’installation", "https://www.mumble.com/support/mumble-server-install-on-windows.php", target: "_blank"} IMPORTANT : En ouvrant le lien «Mumble » ci-dessus, ne cliquez pas sur le bouton « Create » mais bien sur l’icône de votre logiciel d’exploitation soit Windows, Apple ou Linux (voir le cercle rouge dans l’image ci-dessous).
         %p= image_tag "download_mumble.jpg"
-        
-    %h2 2. Rejoindre la discussion
-    .row
-      .col-md-12
+
+        %h4 2) Réglage du son
         %p
-          Une fois installé, il vous suffit de l’ouvrir et de vous connecter à notre serveur avec les informations ci-dessous et en suivant les étapes décrites ici : #{link_to "https://www.mumble.com/support/how-to-connect-to-a-mumble-server.php", "https://www.mumble.com/support/how-to-connect-to-a-mumble-server.php", target: "_blank"}
-        %blockquote
-          %strong Nom:
-          A.C.C.Q. (vous pouvez mettre ce que vous voulez, ce champ vous permet de vous rappeler de quel serveur il s’agit).
-          %br/
-          %strong Adresse:
-          accq.mumble.com
-          %br/
-          %strong Port:
-          64082
-          %br/
-          %strong Nom d’utilisateur:
-          Votre pseudo (doit permettre de vous identifier)
-          
-      
-    %h2 3. Réglages MUMBLE
-    .row
-      .col-md-12
+          Une fois ce logiciel installé dans vos programmes, lorsque vous l’ouvrirez pour la première fois, Mumble vous dirige généralement vers l’assistant audio.
+
         %p
-          Une fois connecté, il est important de régler la fonction « appuyer pour parler » (push to talk) qui est très pratique pour tout le monde, elle permet d’éviter les échos des autres personnes (rendant les conversations très désagréables). Vous n’avez qu’à suivre les étapes : #{link_to "https://www.mumble.com/support/mumble-server-push-to-talk.php", "https://www.mumble.com/support/mumble-server-push-to-talk.php", target: "_blank"}
-  .col-md-4
-    .row
-      .col-md-12
-        %blockquote.small
-          %p
-            %strong
-              %u Informations de connexion
-          %strong Nom:
-          A.C.C.Q. (vous pouvez mettre ce que vous voulez, ce champ vous permet de vous rappeler de quel serveur il s’agit).
+          <b>IMPORTANT:</b> Bien installer la fonction  «appuyer pour parler» qui se trouve sur la page « Détection de l’Activité Vocale ». Également, à la page suivante, « Qualité et notifications », il est important de désactiver la fonction « synthèse vocale ». Pour vous aider sur ce point, veuillez consulter le lien suivant : #{link_to "https://www.mumble.com/support/mumble-server-push-to-talk.php", "https://www.mumble.com/support/mumble-server-push-to-talk.php", target: "_blank"}
+
+
+        %h4 3) Rejoindre la discussion
+
+        %p
+          Une fois installé, il vous suffit de l’ouvrir et de vous connecter à notre serveur avec les informations ci-dessous et en suivant les étapes décrites ici : #{link_to "https://www.mumble.com/support/how-to-connect-to-a-mumble-server.php", "https://www.mumble.com/support/how-to-connect-to-a-mumble-server.php"}
+
+        %p
+          Nom: A.C.C.Q. (vous pouvez mettre ce que vous voulez, ce champ vous permet de vous rappeler de quel serveur il s’agit).
           %br/
-          %strong Adresse:
-          accq.mumble.com
+          Adresse: accq.mumble.com
           %br/
-          %strong Port:
-          64082
+          Port: 64082
           %br/
-          %strong Nom d’utilisateur:
-          Votre pseudo  (doit permettre de vous identifier)
-    .row
-      .col-md-12
-        :plain
-          <script type="text/javascript" src="https://view.light-speed.com/mumble.php?url=https%3A//api.mumble.com/mumble/cvp.php%3Ftoken%3DLSG-85-F8F57DEB&c=04418f&r=7&h=600&w=315&css=https%3A//view.light-speed.com/styles/mumble-minimal.css"></script>
+          Nom d’utilisateur: Votre pseudo (doit permettre de vous identifier)
+  .col-md-2
+    :plain
+      <script type="text/javascript" src="https://view.light-speed.com/mumble.php?url=https%3A//api.mumble.com/mumble/cvp.php%3Ftoken%3DLSG-85-F8F57DEB&c=04418f&r=7&h=600&w=315&css=https%3A//view.light-speed.com/styles/mumble-minimal.css"></script>
