Activer section bibliothèque

--- a/app/views/home/bibliotheque.haml
+++ b/app/views/home/bibliotheque.haml
@@ -6,9 +6,31 @@
 .row
   .col-md-6
     %h2.sub-section
-      Constitutions de pays
-    %p Plusieurs exemples de constitutions à venir
+      Documents de travail
+    %ul
+      %li
+        Mémoire collaboratif de l’ACCQ présenté à Constituons! le 17 février 2019.
+        =link_to "Télécharger le document (.docx)", "/memoire_collaboratif_ACCQ_constituons.docx", target: "_blank"
+
+
   .col-md-6
     %h2.sub-section
-      Constitutions rédigées par des citoyens
-    %p Plusieurs exemples de constitutions à venir
+      Constitutions existantes
+
+    %ul.list-unstyled
+      %li
+        %h3 Constitution de l’Islande de 2011, non encore ratifiée.
+
+        %p
+          Cette constitution a été commandée par le Parlement islandais en 2010 à la suite d’une grave crise de confiance des citoyens dans les institutions dans la foulée de la crise financière, ce qu’on a appelé là-bas la “Révolution des casseroles”. 1000 citoyens tirés au sort ont rédigé le cahier des charges. Les Islandais ont ensuit élu 15 hommes et 10 femmes qui ont invité la population à soumettre ses propositions. Ces 25 personnes ont alors pris quatre mois pour rédiger le projet de constitution qui a été ratifié à 66% des votants lors d’un référendum le 20 octobre 2012. Pour entrer en vigueur, cette constitution devait être ensuite ratifiée par deux législatures différentes, ce qui n’a jamais eu lieu du fait d’un retour au pouvoir des partis de centre droit lors des élections de 2013.
+
+        %p
+          = link_to "Télécharger le document", "http://www.stjornlagarad.is/other_files/stjornlagarad/Frumvarp-enska.pdf", target: "_blank"
+          %small (.pdf)
+
+      %li
+        %h3 Autres constitutions
+
+        %p
+          = link_to "Version française de diverses constitutions, par pays.", "https://fr.wikipedia.org/wiki/Liste_de_constitutions_nationales", target: "_blank"
+          %small (page Wikipedia)
