--- a/app/views/home/mission.haml
+++ b/app/views/home/mission.haml
@@ -13,4 +13,4 @@
 
     %ul
       %li= link_to "Découvrez votre ACRQ", hives_path
-      %li= link_to "Signez l'APPEL maintenant", event_path(2)
+      %li= link_to "Signez le manifeste maintenant", manifest_path
