--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -50,7 +50,7 @@
               %ul.dropdown-menu
                 %li= link_to "Constat", constat_path
                 %li= link_to "Mission", mission_path
-                %li= link_to "Bibliothèque (à venir)".html_safe, mediatheque_path
+                %li= link_to "Bibliothèque".html_safe, bibliotheque_path
                 %li= link_to "Médiathèque".html_safe, mediatheque_path
                 %li= link_to "Promouvoir", promotional_tools_path
 
