--- a/app/views/home/bibliotheque.haml
+++ b/app/views/home/bibliotheque.haml
@@ -10,7 +10,7 @@
     %ul
       %li
         Mémoire collaboratif de l’ACCQ présenté à Constituons! le 17 février 2019.
-        =link_to "Télécharger le document (.docx)", "/memoire_collaboratif_ACCQ_constituons.pdf", target: "_blank"
+        =link_to "Télécharger le document (.pdf)", "/memoire_collaboratif_ACCQ_constituons.pdf", target: "_blank"
 
 
   .col-md-6
