sondage et autres modifications

--- a/app/views/home/engagement_candidats.html.haml
+++ b/app/views/home/engagement_candidats.html.haml
@@ -29,7 +29,7 @@
 
 
 %ul
-  %li= link_to "Le projet de loi", projet_de_loi_path
+  %li= link_to "Requêtes et recommandations", projet_de_loi_path
   %li= link_to "Liste des personnes candidates par circonscription", districts_path
   %li= link_to "Pour signer l'APPEL", event_path(2)
   %li= link_to "Imprimez nos outils de promotion maintenant", promotional_tools_path
