--- a/app/views/home/realisations.html.haml
+++ b/app/views/home/realisations.html.haml
@@ -10,3 +10,5 @@
 %ul.list.list-unstyled.list-inline.text-center
   %li= link_to "Liste des personnes candidates qui se sont prononcées", engagements_path, class: "btn btn-danger"
   %li= link_to "Liste des personnes candidates par circonscription", districts_path, class: "btn btn-danger"
+
+%p.text-center= link_to "Projet de loi de convocation (version 1)", projet_de_loi_path, class: "btn btn-info"
