--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,3 +48,17 @@ body { padding-top: 50px; }
 @import "pickadate/default.time";
 // Whatever application styles you have go last
 @import "style";
+
+
+
+ol[type='a'] {
+  counter-reset: list;
+
+  li {
+    list-style: none;
+  }
+  li:before {
+    content: counter(list, lower-alpha) ") ";
+    counter-increment: list;
+  }
+}
