--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -5,7 +5,7 @@
         %h4 NOUVEAU SONDAGE EN LIGNE
         %p Donnez-nous votre avis sur ce que devrait être une implication citoyenne. Depuis cinq ans déjà, l'idée d'une constituante citoyenne chemine. Nous travaillons à mettre en place les conditions nécessaires pour réaliser cette  avancée remarquable pour le peuple québécois.  Votre participation à ce sondage nous aidera à mener à bien notre mission.
 
-        .text-center= link_to "Répondre au sondage maintenant", sondages_path, class: "btn btn-info btn-lg"
+        .text-center= link_to "Répondre au sondage maintenant", sondage_path, class: "btn btn-info btn-lg"
   .col-md-6
     -if @next_event
       %h3.sub-section À ne pas manquer
