Projet de loi V1

--- a/app/views/home/realisations.html.haml
+++ b/app/views/home/realisations.html.haml
@@ -11,4 +11,4 @@
   %li= link_to "Liste des personnes candidates qui se sont prononcées", engagements_path, class: "btn btn-danger"
   %li= link_to "Liste des personnes candidates par circonscription", districts_path, class: "btn btn-danger"
 
-%p.text-center= link_to "Projet de loi de convocation (version 1)", projet_de_loi_path, class: "btn btn-info"
+%p.text-center= link_to "Projet de loi de convocation (version 1)", projet_de_loi_v1_path, class: "btn btn-info"
