--- a/app/views/home/bibliotheque.haml
+++ b/app/views/home/bibliotheque.haml
@@ -11,7 +11,9 @@
       %li
         Mémoire collaboratif de l’ACCQ présenté à Constituons! le 17 février 2019.
         =link_to "Télécharger le document (.pdf)", "/memoire_collaboratif_ACCQ_constituons.pdf", target: "_blank"
-
+      %li
+        Rapport synthèse de Constituons!
+        =link_to "Télécharger le document (.pdf)", "http://inm.qc.ca/docs/CONSTITUONS/constituons_rapport_synthese.pdf?fbclid=IwAR0VHHE7aN5vlNLZaJgJN9_YVB2s3DTnQI7p5AuIGKMijz3hz8ETpeihBDM", target: "_blank"
 
   .col-md-6
     %h2.sub-section
