--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -2,8 +2,8 @@
   .col-xs-12
     .panel.panel-default
       .panel-body
-        %h4 NOUVEAU SONDAGE EN LIGNE
-        %p Donnez-nous votre avis sur ce que devrait être une implication citoyenne. Depuis cinq ans déjà, l'idée d'une constituante citoyenne chemine. Nous travaillons à mettre en place les conditions nécessaires pour réaliser cette  avancée remarquable pour le peuple québécois.  Votre participation à ce sondage nous aidera à mener à bien notre mission.
+        %h3 SONDAGE EN LIGNE
+        %p Depuis cinq ans déjà, l'idée d'une constituante citoyenne chemine. L'ACCQ travaille à mettre en place les conditions nécessaires pour réaliser cette  avancée remarquable pour le peuple québécois. Votre participation à ce sondage nous aidera à mener à bien notre mission.
 
         .text-center= link_to "Répondre au sondage maintenant", sondage_path, class: "btn btn-info btn-lg"
   .col-md-6
@@ -24,7 +24,7 @@
         %br/
         =link_to "Inscription en ligne", event_path(@next_event), class: "btn btn-info"
 
-    %h3.sub-section=link_to(image_tag("assemblee_citoyenne_virtuelle.jpg", class: "img-responsive"), mumble_path)
+    %h3.sub-section=link_to(image_tag("assemblee_citoyenne_virtuelle.jpg", class: "img-responsive"), assemblee_virtuelle_path)
     .youtube-container
       .youtube-player{"data-id" => "Lh71SO0Ggy4"}
     %p Plusieurs autres vidéos sont disponibles dans la #{link_to "médiathèque", mediatheque_path}!
