--- a/app/views/home/projet_de_loi.html.haml
+++ b/app/views/home/projet_de_loi.html.haml
@@ -2,7 +2,7 @@
   Requêtes et recommandations
 
 -breadcrumb :projet_de_loi
-#projet_de_loi
+#projet_de_loi.text-justify
   %p L’Alliance pour une constituante citoyenne du Québec invite les membres de l’Assemblée nationale à adopter une loi créant une Assemblée constituante citoyenne chargée de rédiger la première constitution de l’histoire du Québec. Une fois ratifiée par voie de référendum, cette constitution deviendra exécutoire. L’Assemblée constituante, non partisane, doit être libre dans ses délibérations et ses conclusions.
 
   %h3 Une Assemblée constituante citoyenne québécoise, pourquoi ?
@@ -25,7 +25,7 @@
     %li de définir les droits humains en matière d’environnement, dont le droit à un environnement sain, l’accès à l’eau potable, le respect des écosystèmes, l’utilisation durable du territoire et de ses ressources;
     %li de décrire l’organisation des pouvoirs législatif, exécutif et judiciaire et les relations entre eux;
     %li de préciser les moyens par lesquels les citoyens pourront participer en permanence et de façon contraignante aux décisions qui les concernent, ainsi que les pouvoirs des citoyens au plan territorial;
-    %li d’établir les modalités et le calendrier de l’entrée en vigueur de ces dispositions, y compris, le cas échéant, de celles modifiant les lois ou l’ordre constitutionnel du Canada ;
+    %li d’établir les modalités et le calendrier de l’entrée en vigueur de ces dispositions, y compris, le cas échéant, de celles modifiant les lois ou l’ordre constitutionnel du Canada;
     %li de définir une procédure citoyenne d’amendement de la constitution pour les générations futures.
 
   %h3 2) LE CALENDRIER
@@ -55,7 +55,9 @@
     %li
       %strong Nombre de personnes constituantes
       %p
-        Pour tenir compte de la diversité de la société québécoise sans tomber dans des effectifs pléthoriques, il nous semble que le chiffre magique devrait être de l’ordre de quelques centaines plutôt que de dizaines de personnes. Pour assurer la parité homme-femme, il faudrait que les délégations de chacune des 17 régions administratives aient un nombre pair de représentants. Hypothèses :
+        Pour tenir compte de la diversité de la société québécoise sans tomber dans des effectifs pléthoriques, il nous semble que le chiffre magique devrait être de l’ordre de quelques centaines plutôt que de dizaines de personnes. Pour assurer la parité homme-femme, il faudrait que les délégations de chacune des 17 régions administratives aient un nombre pair de représentants.
+
+      %p <strong>Hypothèses :</strong>
       %ul
         %li à 2 représentants par région, cela ferait une délégation régionale de 34 personnes et une délégation nationale de 68, pour un total de 102 personnes;
         %li à 4 représentants par région, cela ferait une Assemblée constituante de 204 membres (68 pour les régions, 136 pour la délégation nationale).
@@ -124,13 +126,13 @@
     %li Niveau de compensation suffisamment élevé pour permettre à des citoyens à revenu modeste de devenir constituants tout en continuant à pouvoir faire face à leurs responsabilités financières.
     %li Garantie d’une réinsertion professionnelle sans pénalité à la fin du mandat de la Constituante.
 
-  %p Explications au sujet de la garantie de réinsertion à l’emploi
+  %p <strong>Explications au sujet de la garantie de réinsertion à l’emploi</strong>
   %p
     Les personnes constituantes ne devraient pas être pénalisées dans la poursuite de leur carrière du fait de leur dévouement au bien commun pendant la durée de leur mandat. Nous pensons que les personnes constituantes devraient jouir des mêmes protections de base que les jurés, mais avec certaines améliorations. Nous recommandons que lors de sa réintégration au travail, la personne bénéficie des mêmes progressions dans l’échelle salariale, ancienneté et avantages marginaux, que si elle était restée à son emploi pendant la durée des travaux de l’Assemblée constituante. Si la personne bénéficie d’un plan de pension ou d’épargne de l’employeur, l’État devrait, le cas échéant, assumer les contributions de l’employeur pendant la durée de ses fonctions de membre de l’Assemblée constituante.
 
   %h3 6) LES DROITS DES PEUPLES AUTOCHTONES
 
-  %p Des Inuits et des membres des Premières nations pourront se porter candidats à l’Assemblée constituante citoyenne à titre individuel, mais cela ne résout pas l’ensemble de la question de la participation des peuples originaires au processus. En effet, ces populations jouissent de droits collectifs reconnus, tant au niveau international que national, droit qui doivent être respectés. C’est pourquoi nous recommandons qu’en conformité avec la Déclaration des Nations Unies sur les droits des peuples autochtones, l’Assemblée constituante citoyenne du Québec soit tenue de respecter, dans son projet de constitution, les droits fondamentaux des peuples autochtones du Québec, notamment leur droit inhérent à l’autodétermination et à l’autonomie gouvernementale ainsi que leurs droits territoriaux, issus ou non de traités.
+  %p Des Inuits et des membres des Premières Nations pourront se porter candidats à l’Assemblée constituante citoyenne à titre individuel, mais cela ne résout pas l’ensemble de la question de la participation des peuples originaires au processus. En effet, ces populations jouissent de droits collectifs reconnus, tant au niveau international que national, droit qui doivent être respectés. C’est pourquoi nous recommandons qu’en conformité avec la Déclaration des Nations Unies sur les droits des peuples autochtones, l’Assemblée constituante citoyenne du Québec soit tenue de respecter, dans son projet de constitution, les droits fondamentaux des peuples autochtones du Québec, notamment leur droit inhérent à l’autodétermination et à l’autonomie gouvernementale ainsi que leurs droits territoriaux, issus ou non de traités.
   %p Ces droits impliquent qu’une fois la Constitution du Québec ratifiée par voie de référendum, le gouvernement du Québec devra engager de bonne foi des négociations de nation à nations avec les peuples autochtones afin de préciser leur place dans l’ordre constitutionnel québécois.
   %p Enfin, les nations et communautés autochtones qui le désireraient devraient pouvoir définir leur propre processus constituant.
 
