--- a/app/views/home/sondage.html.haml
+++ b/app/views/home/sondage.html.haml
@@ -6,7 +6,7 @@
 .row
   .col-xs-12
     %p
-      Auriez-vous l’obligeance de prendre le temps nécessaire pour répondre à ce très court sondage pour nous permettre de mieux cibler nos actions futures ?
+      Merci de répondre à ce sondage qui nous permettra de mieux cibler nos actions futures.
     :plain
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfy1mtE4lQEfmndzvskL1YYRfLo8pfzh9UddC5HYVYsIvTk9w/viewform?embedded=true" width="640" height="4000" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours…</iframe>
 
