Nouveau vidéo sur la page d'accueil

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -26,6 +26,8 @@
 
     %h3.sub-section=link_to(image_tag("assemblee_citoyenne_virtuelle.jpg", class: "img-responsive"), assemblee_virtuelle_path)
     .youtube-container
+      .youtube-player{"data-id" => "NvCW1Xat-5s"}
+    .youtube-container
       .youtube-player{"data-id" => "Lh71SO0Ggy4"}
     %p Plusieurs autres vidéos sont disponibles dans la #{link_to "médiathèque", mediatheque_path}!
 
